# aria2_dht_dat_parser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/aria2_dht_dat_parser/: __main__.py  parser.py
